# Super-Ferris-Demo

./: Cargo.toml  README.md  build.rs
assets/: level.txt  tileset.yaml
src/: components.rs  entity_manager.rs  game.rs  input_manager.rs  main.rs  renderer.rs  systems.rs  texture.rs
src/components/: component.rs  log_component.rs  position_component.rs  sprite_component.rs
src/shaders/: basic.frag  basic.frag.spirv  basic.vert  basic.vert.spirv
src/systems/: draw_system.rs  logging_system.rs  player_system.rs
