[package]
name = "super-ferris-game"
version = "0.1.0"
authors = ["Boxfish <metakirby123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit="0.23"
image="0.23"
futures="0.3"

[dependencies.wgpu]
version="0.6"
features=["vulkan-portability"]